samples/_failures_safe/1761256909_7bf8c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4873e374.c: In function ‘main’:
./samples/SAFE/__tmp_4873e374.c:180:9: error: expected expression at end of input
  180 |         input[len - 1] =
      |         ^~~~~
./samples/SAFE/__tmp_4873e374.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4873e374.c:180:9: error: expected declaration or statement at end of input
